fixed z-index

--- a/src/components/CallPage/CallPage.scss
+++ b/src/components/CallPage/CallPage.scss
@@ -6,6 +6,6 @@
     position: absolute;
     top: 0;
     left: 0;
-    z-index: -1000;
+    z-index: -10000;
   }
 }
